--- a/page/wedpad.css
+++ b/page/wedpad.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url('bg.png');
+    background-image: url('background.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -29,6 +29,8 @@ body {
     margin-bottom: 4px;
     color: white;
     background-color: rgba(0, 0, 0, 0.7);
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 #main-log {
@@ -54,9 +56,8 @@ body {
 }
 
 #right {
-    border-radius: 8px;
     float: right;
-    width: 9%;
+    width: 10%;
     height: 100vh;
     display: grid;
     grid-template-columns: 100%;
@@ -74,8 +75,8 @@ body {
     text-align: center;
     flex-wrap: wrap;
     color: white;
-    box-shadow: 3px 5px 5px black;
-    background-color: rgba(250, 250, 250, 0.2);
+    box-shadow: 5px 7px 10px black;
+    background-color: rgba(250, 250, 250, 0.5);
 }
 
 .nav-button-active {
@@ -88,7 +89,7 @@ body {
     text-align: center;
     flex-wrap: wrap;
     color: white;
-    box-shadow: 3px 5px 5px black;
+    box-shadow: 5px 7px 10px black;
     background-color: rgba(250, 250, 0, 0.5);
 }
 
