--- a/res/page/wedpad.css
+++ b/res/page/wedpad.css
@@ -16,14 +16,14 @@ body {
     padding: 0;
 }
 
-#top {
+#view-top {
     border-radius: 8px;
     display: inline;
     background-color: rgba(0, 0, 0, 0.7);
     margin: 0;
 }
 
-.main-view {
+.view-main {
     border-radius: 8px;
     margin-top: 4px;
     margin-bottom: 4px;
@@ -33,23 +33,23 @@ body {
     overflow-y: scroll;
 }
 
-#main-log {
+#view-log {
     display: block;
 }
 
-#main-system {
+#view-system {
     display: none;
 }
 
-#main-bodies {
+#view-bodies {
     display: none;
 }
 
-#main-signals {
+#view-signals {
     display: none;
 }
 
-#bottom {
+#view-bottom {
     border-radius: 8px;
     display: block;
     background-color: rgba(0, 0, 0, 0.7);
@@ -65,42 +65,50 @@ body {
     background-color: rgba(250, 250, 250, 0.1);
 }
 
-.nav-button {
+.button {
     border-radius: 8px;
     display: flex;
     justify-self: stretch;
     margin: 4px;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    /*text-align: center;*/
     flex-wrap: wrap;
     color: white;
     box-shadow: 5px 7px 10px black;
     background-color: rgba(250, 250, 250, 0.5);
 }
 
-.nav-button-active {
-    border-radius: 8px;
-    display: flex;
-    justify-self: stretch;
-    margin: 4px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-wrap: wrap;
-    color: white;
-    box-shadow: 5px 7px 10px black;
+.button-active {
     background-color: rgba(250, 250, 0, 0.5);
 }
 
-#nav-log {
+.button-attention {
+	animation: blinkingBackground 0.7s infinite;
 }
 
-#nav-system {
+@keyframes blinkingBackground{
+	0%		{ background-color: rgba(250, 250,   0, 0.5); }
+	10%		{ background-color: rgba(250, 250,  25, 0.5); }
+	20%		{ background-color: rgba(250, 250,  65, 0.5); }
+	30%		{ background-color: rgba(250, 250, 125, 0.5); }
+	40%     { background-color: rgba(250, 250, 188, 0.5); }
+	50%		{ background-color: rgba(250, 250, 250, 0.5); }
+	60%		{ background-color: rgba(250, 250, 188, 0.5); }
+	70%		{ background-color: rgba(250, 250, 125, 0.5); }
+	80%		{ background-color: rgba(250, 250,  65, 0.5); }
+	90%		{ background-color: rgba(250, 250,  25, 0.5); }
+	100%	{ background-color: rgba(250, 250,   0, 0.5); }
 }
 
-#nav-bodies {
+#button-log {
 }
-#nav-signals {
+
+#button-system {
+}
+
+#button-bodies {
+}
+#button-signals {
 }
 
