--- a/res/page/wedpad.css
+++ b/res/page/wedpad.css
@@ -112,3 +112,16 @@ body {
 #button-signals {
 }
 
+.stars {
+    color: white;
+    border: solid 1px red;
+    border-collapse: collapse;
+    width: 100%;
+    /*table-layout: fixed;*/
+    overflow-wrap: break-word;
+    align: center;
+    text-align: center;
+}
+
+
+
