--- a/res/templates/view-system.tmpl
+++ b/res/templates/view-system.tmpl
@@ -1,1 +1,37 @@
-<p>{{ index . "text" }}</p>
+<table class="stars">
+<caption>
+    SYSTEM NAME HERE
+</caption>
+<thead>
+    <tr >
+        <th>Type</th>
+        <th>Class</th>
+        <th>Lum</th>
+        <th>Dist(Ls)</th>
+        <th>Rad(Sol)</th>
+        <th>Mass(Sol)</th>
+        <th>Temp(K)</th>
+        <th>Rings</th>
+        <th>RingRad(Ls)</th>
+        <th>Disco</th>
+    </tr>
+</thead>
+
+<tbody>
+{{ range $i, $v := . }}
+    <tr>
+        <td><font color="{{$v.Type.Color}}">{{ $v.Type.Str }}</font></td>
+        <td>{{ $v.Subclass }}</td>
+        <td>{{ $v.Luminosity }}</td>
+        <td>{{ $v.DistanceLs }}</td>
+        <td>{{ $v.RadiusS }}</td>
+        <td>{{ $v.MassS }}</td>
+        <td>{{ $v.TemperatureK }}</td>
+        <td>{{ $v.RingsNum }}</td>
+        <td>{{ $v.RingsRadiusLs }}</td>
+        <td>{{ $v.Discovered.Str }}</td>
+    </tr>
+{{ end }}
+</tbody>
+
+</table>
