--- a/res/page/wedpad.css
+++ b/res/page/wedpad.css
@@ -112,16 +112,43 @@ body {
 #button-signals {
 }
 
-.stars {
+.stars-table {
     color: white;
-    border: solid 1px red;
-    border-collapse: collapse;
+    border: none;
     width: 100%;
     /*table-layout: fixed;*/
     overflow-wrap: break-word;
-    align: center;
     text-align: center;
 }
 
+.stars-caption {
+    color: white;
+    font-weight: bold;
+    font-style: italic;
+}
 
+.stars-th {
+    font-size: smaller;
+    color: gray;
+}
+
+#stars-type {
+    text-align: right;
+}
+
+#stars-subclass {
+    text-align: left;
+}
+
+#stars-luminosity {
+    text-align: left;
+}
+
+#tr-odd {
+    background-color: rgba(250, 250, 250, 0.12);
+}
+
+#tr-even {
+    background-color: rgba(250, 250, 250, 0.07);
+}
 
