--- a/res/templates/view-system.tmpl
+++ b/res/templates/view-system.tmpl
@@ -1,9 +1,12 @@
 <table class="stars-table">
+
 <caption class="stars-caption">
     {{ .SystemName }}
 </caption>
+
 <thead>
     <tr class="stars-th">
+        <th></th>
         <th id="stars-type">Type,</th>
         <th id="stars-subclass">C</th>
         <th id="stars-luminosity">L</th>
@@ -11,31 +14,40 @@
         <th>Rad(Sol)</th>
         <th>Mass(Sol)</th>
         <th>Temp(K)</th>
-        <th>Rings</th>
-        <th>RingRad(Ls)</th>
-        <th>Disco</th>
+        <th>OrbPeriod(D)</th>
+        <th>RingsN</th>
+        <th>RingR(Ls)</th>
+        <th>Discovered</th>
     </tr>
 </thead>
 
 <tbody>
-{{- $odd := false}}
+{{- $odd := true}}
 {{ range $i, $v := .Data }}
-    {{ $odd = not $odd }}
     {{ if $odd }}
     <tr id="tr-odd">
     {{ else }}
     <tr id="tr-even">
     {{ end }}
-        <td id="stars-type"><font color="{{$v.Type.Color}}">{{ $v.Type.Str }}</font></td>
+        <td id="stars-links">{{ $v.Links }}</td>
+        {{ if not $v.Barycenter }}
+        {{ $odd = not $odd }}
+        <td id="stars-type"><font color="{{$v.Type.Color}}">{{ $v.Type.Type }}</font></td>
         <td id="stars-subclass"><font color="{{$v.Type.Color}}">{{ $v.Subclass }}</font></td>
         <td id="stars-luminosity"><font color="{{$v.Type.Color}}">{{ $v.Luminosity }}</font></td>
         <td>{{ $v.DistanceLs }}</td>
         <td>{{ $v.RadiusS }}</td>
         <td>{{ $v.MassS }}</td>
         <td>{{ $v.TemperatureK }}</td>
+        <td>{{ $v.OrbitalPeriodD }}</td>
         <td>{{ $v.RingsNum }}</td>
         <td>{{ $v.RingsRadiusLs }}</td>
-        <td>{{ $v.Discovered.Str }}</td>
+         {{ if $v.Discovered }}
+         <td id="stars-discovered-true">yes</td>
+         {{ else }}
+         <td id="stars-discovered-false">no</td>
+         {{ end }}
+         {{ end }}
     </tr>
 {{ end }}
 </tbody>
