--- a/res/templates/view-system.tmpl
+++ b/res/templates/view-system.tmpl
@@ -1,7 +1,7 @@
 <table class="stars-table">
 
 <caption class="stars-caption">
-    {{ .SystemName }}
+    {{ .SystemName }}<p>
 </caption>
 
 <thead>
