--- a/res/templates/view-top.tmpl
+++ b/res/templates/view-top.tmpl
@@ -1,4 +1,4 @@
-<table style="color: gray; width: 100%; border: 0; padding: 0;">
+<table style="font-style: italic; color: #B0B0B0; width: 100%; border: 0; padding: 0;">
 <tr>
     <td style="text-align: right;">
         {{ .PrevSystem }}
