--- a/res/templates/view-top.tmpl
+++ b/res/templates/view-top.tmpl
@@ -3,13 +3,13 @@
     <td style="text-align: right;">
         {{ .PrevSystem }}
     </td>
-    <td style="text-align: right; color: {{ .PrevStar.Color }}; font-weight: bold; width: 10%;">
+    <td style="text-align: right; color: {{ .PrevStar.Color }}; font-weight: bold; width: 10%; font-size: 120%;">
         {{ .PrevStar.Type }}
     </td>
-    <td style="text-align: center; color: white; width: 5%;">
+    <td style="text-align: center; color: white; width: 5%; font-weight: bold; font-size: 120%;">
         &raquo;&nbsp;{{ .Jumps }}&nbsp;&raquo;
     </td>
-    <td style="text-align: left; color: {{ .NextStar.Color }}; font-weight: bold; width: 10%;">
+    <td style="text-align: left; color: {{ .NextStar.Color }}; font-weight: bold; width: 10%; font-size: 120%;">
         {{ .NextStar.Type }}
     </td>
     <td style="text-align: left;">
