--- a/res/templates/view-bodies.tmpl
+++ b/res/templates/view-bodies.tmpl
@@ -1,35 +1,54 @@
 <table class="bodies-table">
 
-<caption class="bodies-caption">
+<caption>
 </caption>
 
 <thead>
-    <tr class="bodies-th">
-        <th>&nbsp;</th>
-        <th style="text-align: right;">Name</th>
+    <tr>
+        <th>Name</th>
         <th style="text-align: left;">Type</th>
-        <th>D/L/T</th>
-        <th>Atmo</th>
         <th>Dist(Ls)</th>
+        <th>DMTL</th>
         <th>Rad(E)</th>
         <th>Mass(E)</th>
         <th>Temp(K)</th>
         <th>Grav(G)</th>
         <th>RN</th>
         <th>RR(Ls)</th>
+        <th>Atmo</th>
         <th>bgo</th>
     </tr>
 </thead>
 
-<tbody id="bodies-tbody">
+<tbody>
 {{- $odd := true}}
-{{ range $i, $v := .Data }}
+{{ range $i, $v := . }}
     {{ if $odd }}
         <tr id="tr-odd">
     {{ else }}
         <tr id="tr-even">
     {{ end }}
     {{ $odd = not $odd }}
+    <td>{{ $v.Name }}</td>
+    <td style="text-align: left;"><font color="{{ $v.Type.Color }}">{{ $v.Type.Type }}</font></td>
+    <td>{{ $v.DistanceLs }}</td>
+    <td>
+    {{ range $j, $dmtl := $v.DMTL }}
+        <font color="{{ $dmtl.Color }}">{{ $dmtl.Type }}</font>
+    {{ end }}
+    </td>
+    <td>{{ $v.RadiusE }}</td>
+    <td>{{ $v.MassE }}</td>
+    <td>{{ $v.TemperatureK }}</td>
+    <td>{{ $v.GravityG }}</td>
+    <td>{{ $v.RingsNum }}</td>
+    <td>{{ $v.RingsRadLs }}</td>
+    <td><font color="{{ $v.Atmosphere.Color }}">{{ $v.Atmosphere.Type }}</font></td>
+    <td>
+        {{ range $k, $sig := $v.Signals }}
+            <font color="{{ $sig.Color }}">{{ $sig.Type }}</font>
+        {{ end }}
+    </td>
     </tr>
 {{ end }}
 </tbody>
