--- a/res/templates/view-bodies.tmpl
+++ b/res/templates/view-bodies.tmpl
@@ -6,9 +6,9 @@
 <thead>
     <tr>
         <th>Name</th>
-        <th style="text-align: left;">Type</th>
+        <th>Type</th>
         <th>Dist(Ls)</th>
-        <th>DMTL</th>
+        <th>A:DMTL</th>
         <th>Rad(E)</th>
         <th>Mass(E)</th>
         <th>Temp(K)</th>
@@ -16,7 +16,7 @@
         <th>RN</th>
         <th>RR(Ls)</th>
         <th>Atmo</th>
-        <th>bgo</th>
+        <th>S:BGHO</th>
     </tr>
 </thead>
 
@@ -29,8 +29,8 @@
         <tr id="tr-even">
     {{ end }}
     {{ $odd = not $odd }}
-    <td>{{ $v.Name }}</td>
-    <td style="text-align: left;"><font color="{{ $v.Type.Color }}">{{ $v.Type.Type }}</font></td>
+    <td><font color="gray"><i>{{ $v.Name }}</i></font></td>
+    <td><font color="{{ $v.Type.Color }}">{{ $v.Type.Type }}</font></td>
     <td>{{ $v.DistanceLs }}</td>
     <td>
     {{ range $j, $dmtl := $v.DMTL }}
@@ -42,7 +42,7 @@
     <td>{{ $v.TemperatureK }}</td>
     <td>{{ $v.GravityG }}</td>
     <td>{{ $v.RingsNum }}</td>
-    <td>{{ $v.RingsRadLs }}</td>
+    <td>{{ $v.RingsRaiusdLs }}</td>
     <td><font color="{{ $v.Atmosphere.Color }}">{{ $v.Atmosphere.Type }}</font></td>
     <td>
         {{ range $k, $sig := $v.Signals }}
