--- a/res/templates/view-bodies.tmpl
+++ b/res/templates/view-bodies.tmpl
@@ -8,7 +8,7 @@
         <th>Name</th>
         <th>Type</th>
         <th>Dist(Ls)</th>
-        <th>A:DMTL</th>
+        <th>DMTL</th>
         <th>Rad(E)</th>
         <th>Mass(E)</th>
         <th>Temp(K)</th>
@@ -16,7 +16,7 @@
         <th>RN</th>
         <th>RR(Ls)</th>
         <th>Atmo</th>
-        <th>S:BGHO</th>
+        <th>BGGHO</th>
     </tr>
 </thead>
 
