--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -73,6 +73,7 @@ body {
 .button {
     border-radius: 8px;
     display: flex;
+    flex-flow: wrap;
     justify-self: stretch;
     margin: 4px;
     justify-content: center;
@@ -82,28 +83,45 @@ body {
     color: white;
     box-shadow: 5px 7px 10px black;
     background-color: rgba(250, 250, 250, 0.5);
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
+.button-text {
+    width: 100%;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    flex-wrap: wrap;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    font-weight: bold;
+    font-size: larger;
+    text-align: center;
+    font-family: courier;
 }
 
 .button-active {
-    background-color: rgba(250, 250, 0, 0.5);
+    background-color: rgba(250, 200, 0, 0.6);
 }
 
 .button-attention {
-	animation: blinkingBackground 0.7s infinite;
+	animation: blinkingBackground 1.0s infinite;
 }
 
 @keyframes blinkingBackground{
-	0%		{ background-color: rgba(250, 250,   0, 0.5); }
-	10%		{ background-color: rgba(250, 250,  25, 0.5); }
-	20%		{ background-color: rgba(250, 250,  65, 0.5); }
-	30%		{ background-color: rgba(250, 250, 125, 0.5); }
-	40%     { background-color: rgba(250, 250, 188, 0.5); }
-	50%		{ background-color: rgba(250, 250, 250, 0.5); }
-	60%		{ background-color: rgba(250, 250, 188, 0.5); }
-	70%		{ background-color: rgba(250, 250, 125, 0.5); }
-	80%		{ background-color: rgba(250, 250,  65, 0.5); }
-	90%		{ background-color: rgba(250, 250,  25, 0.5); }
-	100%	{ background-color: rgba(250, 250,   0, 0.5); }
+	0%		{ background-color: rgba(250, 200, 0, 0.1); }
+	10%		{ background-color: rgba(250, 200, 0, 0.2); }
+	20%		{ background-color: rgba(250, 200, 0, 0.3); }
+	30%		{ background-color: rgba(250, 200, 0, 0.4); }
+	40%     { background-color: rgba(250, 200, 0, 0.5); }
+	50%		{ background-color: rgba(250, 200, 0, 0.6); }
+	60%		{ background-color: rgba(250, 200, 0, 0.5); }
+	70%		{ background-color: rgba(250, 200, 0, 0.4); }
+	80%		{ background-color: rgba(250, 200, 0, 0.3); }
+	90%		{ background-color: rgba(250, 200, 0, 0.2); }
+	100%	{ background-color: rgba(250, 200, 0, 0.1); }
 }
 
 #button-log {
