--- a/res/templates/view-system.tmpl
+++ b/res/templates/view-system.tmpl
@@ -44,7 +44,7 @@
            <td style="font-weight: bold;">
                <font color="{{ $v.Type.Color }}">{{ $v.Type.Type }} {{ $v.Subclass }}</font>
            </td>
-           <td style="text-align: left;">
+           <td style="text-align: left; font-size: smaller;">
                <font color="{{ $v.Type.Color }}">{{ $v.Luminosity }}</font>
             </td>
            {{ if $v.Discovered }}
