--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -249,6 +249,28 @@ body {
     text-align: left;
 }
 
+.hint-table {
+    visibility: hidden;
+    font-size: 70%;
+    z-index: 100;
+    position: absolute;
+    border-radius: 8px;
+    border: solid 1px black;
+    background-color: rgba(250, 250, 250, 0.8);
+    top: 7%;
+    right: 12%;
+    box-shadow: 5px 7px 10px black;
+}
+
+.hint-table tr th td {
+    font-size: 70%;
+    overflow-wrap: break-word;
+}
+
+.signals-table td:hover .hint-table {
+    visibility: visible;
+}
+
 .signals-table tbody {
     font-size: larger;
     /* font-family: courier, courier new, serif; */
