--- a/res/templates/view-signals.tmpl
+++ b/res/templates/view-signals.tmpl
@@ -31,7 +31,7 @@
                     <th>Notes</th>
                 </tr>
             </thead>
-            <tbody>`{{ $v.Hint }}</tbody>
+            <tbody>{{ $v.Hint }}</tbody>
             </table>
         </td>
     </tr>
