--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -251,19 +251,19 @@ body {
 
 .hint-table {
     visibility: hidden;
-    font-size: 70%;
+    font-size: 60%;
     z-index: 100;
     position: absolute;
     border-radius: 8px;
     border: solid 1px black;
-    background-color: rgba(250, 250, 250, 0.8);
+    background-color: #FFDEAD;
     top: 7%;
     right: 12%;
     box-shadow: 5px 7px 10px black;
 }
 
 .hint-table tr th td {
-    font-size: 70%;
+    font-size: 60%;
     overflow-wrap: break-word;
 }
 
