--- a/res/templates/view-system.tmpl
+++ b/res/templates/view-system.tmpl
@@ -9,12 +9,12 @@
         <th>&nbsp;</th>
         <th>Type</th>
         <th style="text-align: left;">C, L</th>
-        <th>Discovered</th>
+        <th>Disc</th>
         <th>Dist(Ls)</th>
         <th>Rad(Sol)</th>
         <th>Mass(Sol)</th>
-        <th>Temp(K)</th>
-        <th>OrbPeriod(D)</th>
+        <th>Temper(K)</th>
+        <th>OrbPer(D)</th>
         <th>RingsN</th>
         <th>RingR(Ls)</th>
     </tr>
