--- a/res/templates/view-signals.tmpl
+++ b/res/templates/view-signals.tmpl
@@ -26,9 +26,9 @@
             <table class="hint-table">
             <thead>
                 <tr>
-                    <th>Variant</th>
-                    <th>Payout</th>
-                    <th>Notes</th>
+                    <th style="text-align: center;">Variant</th>
+                    <th style="text-align: center;">Payout</th>
+                    <th style="text-align: center;">Notes</th>
                 </tr>
             </thead>
             <tbody>{{ $v.Hint }}</tbody>
