--- a/res/templates/view-signals.tmpl
+++ b/res/templates/view-signals.tmpl
@@ -24,6 +24,7 @@
         <td style="text-align: center;">{{ $v.Type }}</td>
         <td style="text-align: left;">{{ $v.Description }}
             <table class="hint-table">
+            <caption>{{ $v.Name }}</caption>
             <thead>
                 <tr>
                     <th style="text-align: center;">Variant</th>
