--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -266,21 +266,34 @@ body {
     border-radius: 8px;
     border: 0;
     border-spacing: 5px;
-    background-color: #AA9E9D;
+    background-color: rgba(2000, 200, 0, 0.30);
+    backdrop-filter: blur(5px);
     top: 7%;
     right: 12%;
     box-shadow: 5px 7px 10px black;
 }
 
 .hint-table td {
-    border: dotted 1px gray;
+    border: dotted 1px black;
     border-radius: 5px;
-    background-color: lightgray;
+    background-color: gray;
+    color: white;
+    overflow-wrap: break-word;
+}
+
+.hint-table caption {
+    border: dotted 1px black;
+    background-color: rgba(2000, 200, 0, 0.30);
+    border-radius: 5px;
+    color: white;
+    font-size: 120%;
+    font-weight: bold;
+    text-decoration: underline;
     overflow-wrap: break-word;
 }
 
 .hint-table th {
-    color: black;
+    color: lightgray;
 }
 
 .signals-table td:hover .hint-table {
