--- a/res/templates/view-bodies.tmpl
+++ b/res/templates/view-bodies.tmpl
@@ -3,32 +3,32 @@
 <caption>
     {{- $nnum := 0 }}
     {{ range $i, $v := . }}
-        {{ if ne $v.Notes  "" }}
+        {{ if ($v.Notes) | and (ne $v.Notes "") }}
             {{ $nnum = 1 }}
             {{ break }}
         {{ end }}
     {{ end }}
     {{ if ne $nnum 0 }}
         &Lt;&nbsp;Notable Objects&nbsp;&Gt;
+        <table class="hint-table">
+            <thead>
+                <tr>
+                    <th style="text-align: center;">BodyName</th>
+                    <th style="text-align: center;">Notes</th>
+                </tr>
+            <thead>
+            <tbody>
+            {{ range $i, $v := . }}
+                {{ if ($v.Notes) | and (ne $v.Notes "") }}
+                <tr>
+                    <td style="text-align: right;"><b>{{ $v.NotesName }}</b></td>
+                    <td style="text-align: left;"><i>{{ $v.Notes }}</i></td>
+                </tr>
+                {{ end }}
+            {{ end }}
+            </tbody>
+        </table>
     {{ end }}
-    <table class="hint-table">
-        <thead>
-            <tr>
-                <th style="text-align: center;">BodyName</th>
-                <th style="text-align: center;">Notes</th>
-            </tr>
-        <thead>
-        <tbody>
-        {{ range $i, $v := . }}
-        {{ if ne $v.Notes "" }}
-        <tr>
-            <td style="text-align: right;"><b>{{ $v.Name }}</b></td>
-            <td style="text-align: left;"><i>{{ $v.Notes }}</i></td>
-        </tr>
-        {{ end }}
-        {{ end }}
-        </tbody>
-    </table>
 </caption>
 
 <thead>
